# fast_mpmc_queue

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
_linux/: build_debug.bash  build_debug_clang.bash  build_debug_gcc.bash  build_debug_icpx.bash  build_release.bash  build_release_clang.bash  build_release_gcc.bash  build_release_icpx.bash  config_fs.bash  perform_and_log.bash  test.bash  test_clang.bash  test_gcc.bash  test_icpx.bash  valgrind_txt.bash  valgrind_xml.bash
_windows/: build_debug_clang.cmd  build_debug_gcc.cmd  build_debug_msvc.cmd  build_release_clang.cmd  build_release_gcc.cmd  build_release_msvc.cmd  config_env_clang.cmd  config_env_cmake.cmd  config_env_gcc.cmd  config_env_msvc.cmd  config_env_ninja.cmd  config_fs.cmd  msvc_env.cmd  test_clang.cmd  test_gcc.cmd  test_msvc.cmd
docs/: dynamic_fast_mpmc_queue.md  fast_mpmc_queue.md  fastest_mpmc_queue.md  static_fast_mpmc_queue.md
include/xtxn/: algo.hpp  alignment.hpp  color_barrier.hpp  dynamic_fast_mpmc_queue.hpp  fast_mpmc_queue.hpp  fast_mpmc_queue_commons.hpp  fast_queue_internal.hpp  fastest_mpmc_queue.hpp  mpmc_queue.hpp  mpmcdd_queue.hpp  mpmcsl_queue.hpp  mpsc_queue.hpp  spinlock.hpp  static_fast_mpmc_queue.hpp  types.hpp
src/: CMakeLists.txt  common.hpp  config.hpp  dfmpmcq_test.hpp  execute_before_main.hpp  fast_queue_test.hpp  fastest_queue_test.hpp  init.hpp  memory_profile.hpp  messages.hpp  mpmc_config.hpp  mpmc_stress_test.cpp  mpsc_config.hpp  queue_test.hpp  sfmpmcq_test.hpp  stress_test_mpmc_main.cpp  test_dfmpmcq_main.cpp  test_dfmpscq_main.cpp  test_fast_mpmc_main.cpp  test_fast_mpsc_main.cpp  test_fastest_mpmc_main.cpp  test_fastest_mpsc_main.cpp  test_mpmc_main.cpp  test_mpmcdd_main.cpp  test_mpmcq_main.cpp  test_mpmcqdd_main.cpp  test_mpmcqsl_main.cpp  test_mpmcsl_main.cpp  test_mpsc_main.cpp  test_mpscq_main.cpp  test_sfmpmcq_main.cpp  test_sfmpscq_main.cpp  types.hpp
tests/: CMakeLists.txt  dynamic_fast_mpmc_queue.cpp  fast_queue.cpp  fastest_queue.cpp  static_fast_mpmc_queue.cpp
