cmake_minimum_required(VERSION 3.25)
project(xtxn_fast_mpmc_queue VERSION 0.0.3 LANGUAGES CXX)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(BUILD_STATIC "Build static" OFF)
option(BUILD_TESTS "Build tests" OFF)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(DEBUG _DEBUG)
endif ()

if (NOT BUILD_TESTS)
    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        add_compile_options(/W4 /WX)
    else ()
        add_compile_options(
            -Werror -Wall -Wextra -Wpedantic
            -Wcast-align -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wenum-compare -Wfloat-equal -Wnon-virtual-dtor
            -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wsign-conversion -Wsign-promo -Wno-unknown-pragmas
        )
    endif ()
endif ()

if (WIN32)
    if (CMAKE_CXX_COMPILER_ID MATCHES "IntelLLVM|MSVC")
        add_compile_options(/EHsc /utf-8)
    endif ()
    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        add_compile_options(/Zc:preprocessor)
    endif ()
    add_definitions(/DUNICODE /D_UNICODE /DWIN32_LEAN_AND_MEAN /DNOMINMAX /D_WIN32_WINNT=0x0601)
endif ()

if (BUILD_STATIC)
    if (CMAKE_BUILD_TYPE MATCHES "Debug|RelWithDebInfo")
        set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreadedDebug)
    else ()
        set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreaded)
    endif ()
    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        add_link_options(-static -static-libgcc -static-libstdc++)
    elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang|IntelLLVM")
        add_link_options(-static)
    endif ()
else ()
    if (CMAKE_BUILD_TYPE MATCHES "Debug|RelWithDebInfo")
        set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreadedDebugDLL)
    else ()
        set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreadedDLL)
    endif ()
endif ()

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-ftemplate-depth=500 -fconcepts-diagnostics-depth=500)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-nostdlib)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
    add_compile_options(-axSSE2,SSE3,SSSE3,SSE4.1,SSE4.2,AVX,CORE-AVX2)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_options(/wd4068 /wd4324 /wd4996)
endif ()

#if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
#    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -ggdb3")
#    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -g -ggdb3")
#    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
#    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -Os")
#elseif (CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
#    if (WIN32)
#        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Od -g")
#        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /O3 -g")
#        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O3")
#        set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /O1")
#    else ()
#        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -ggdb3")
#        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O3 -g -ggdb3")
#        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
#        set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -O1")
#    endif ()
#elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
#    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Od /DDEBUG /D_DEBUG") # /DDEBUG:FULL
#    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /O2 /DDEBUG /D_DEBUG") # /DDEBUG:FULL
#    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2")
#    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /Os")
#    set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
#endif ()

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

if (BUILD_TESTS)
    enable_testing()
endif ()

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src")

if (BUILD_TESTS)
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/tests")
endif ()
